--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+
+    <title>Panagiota's Portfolio</title>
+</head>
+  <body>
+    <h1>Panagiota's Portfolio</h1>
+     <h2>I am a Web Developer </h2>
+     <hr/>
+
+     <h3> <a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+     <img src="./public/Birthday Invite.png" height="200" alt="birthday-cake" />
+     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+     <img src="./public/Movie Ranking.png" height="200" alt="movie-ranking">
+     <hr/>
+     <a href="./public/contact.html" >Contact Information</a> 
+     <a href="./public/about.html"> About Me </a>
+  </body>
+
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
