--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,10 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>Best movies According to Panagiota</h1>
+ <h2>My top 3 movies i wathched in 2025</h2>
+ <hr/>
+ 
+ <h3>Civill War</h3>
+ <p>The goat movie of MARVEL STUDIOS!</p>
+ <h3>Guardians of the Galaxy </h3>
+ <p>Very funny to watch.</p>
+ <h3>Thor</h3>
+ <p>Loki is the main reason this movie is in this list :) </p>
